# storytime

./: .gitignore  .gitmodules  CLAUDE.md  README.md  setup.sh
cli/: Cargo.toml  build.rs
cli/src/: clone.rs  dsp.rs  interrupt.rs  main.rs  script.rs
cli/src/mlx/: mod.rs  onnx.rs  ops.rs
docs/: onnx-to-mlx-plan.md  voice-cloning.md
export/: README.md  export.py  requirements.txt  verify_spk.py
mlx-backend/: Makefile  Package.resolved  Package.swift
mlx-backend/Sources/KokoroMLX/: Bridge.swift  ISTFTNet.swift  Model.swift  Modules.swift
mlx-backend/include/: kokoro_mlx.h
samples/: the-fox-and-the-crow.md  the-getaway.md
spike/: br.sh  lower.py  parity.c  ref_dump.py  say.sh
spike/interp/: Cargo.toml  build.rs
spike/interp/src/: main.rs  ops.rs
spike/rust-link/: Cargo.toml  build.rs
spike/rust-link/src/: main.rs
