[package]
name = "storytime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storytime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
ndarray = "0.16"
ort = { version = "=2.0.0-rc.10", features = ["coreml", "ndarray", "download-binaries"] }
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
mlx = []

[profile.release]
lto = "thin"
codegen-units = 1
