[package]
name = "storytime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storytime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
# Voice cloning: rFFT for the speaker-encoder frontend + spectral features.
realfft = "3"
ndarray = "0.16"
ort = { version = "=2.0.0-rc.10", features = ["coreml", "ndarray", "download-binaries"] }
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MLX backend: native ONNX graph parsing (prost runtime only; messages are
# hand-written, so no protoc / prost-build at build time).
prost = { version = "0.13", optional = true }

[build-dependencies]
bindgen = "0.70"

[features]
default = []
mlx = ["dep:prost"]

[profile.release]
lto = "thin"
codegen-units = 1
